# practical-webassembly-sample-code

./: .gitmodules  README.md
ch02/example/: Cargo.toml  index.html  index.js
ch02/hello_wasm/: Cargo.toml  index.html
ch02/hello_wasm_node/: index.js  package.json
ch03/: README.md  example.wasm  example.wat  index.html  index.js  package.json
ch04/: index.html  package-lock.json  package.json  rollDice.cjs
ch04/assembly/: index.ts
ch04/js/: index.js
ch04/roll_dice_node/: roll_dice_node  roll_dice_node.d.ts  roll_dice_node.js  roll_dice_node.wasm.map
ch05/: Cargo.toml  deno-index.js  index.html
ch05/js/: index.js
ch05/roll_dice/: debug.d.ts  debug.js  debug.wasm  debug.wasm.map  debug.wat  release.js  release.wasm  release.wasm.map  release.wat
ch05/src/: lib.rs
ch06/: SETUP.md
ch06/dice_roll/: Cargo.toml  lib.wasm  roll-log.txt
ch06/wasmtime-demo/: Cargo.toml
ch07/: Cargo.toml  index.html
ch07/js/: index.js
ch07/rust_example/: Cargo.toml
ch07/src/: lib.rs
ch07/www/: index.html  index.js  package.json
ch09/debugger-step-through-source/: Cargo.toml
ch09/debugging-console-log/: Cargo.toml  index.html  serve.py
ch09/dice_roll/: .gitignore  Cargo.toml  roll-log.txt
ch09/profiling-chrome-devtools/: Cargo.toml
ch09/profiling-wasmtime/: Cargo.toml
ch09/step-through-wat/: Cargo.toml  LICENSE_MIT
ch10/: Cargo.toml  serve.py
ch11/yew-app/: Cargo.toml
ch11/yew-app/src/: components.rs  main.rs
ch11/yew-app/src/components/: dice_roll_form.rs
ch12/wws-dice-roller/: Cargo.toml
ch12/wws-dice-roller/src/: main.rs
(+21 files in other folders)
